[package]
name = "Fractional-Marketplace"
version = "0.1.0"
edition = "2024"

[dependencies]
borsh = "1.5.7"
borsh-derive = "1.5.7"
solana-program = "2.3.0"
spl-token = { version = "8.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = "7.0.0"

[dev-dependencies]
solana-program-test = "2.3.6"
solana-sdk = "2.3.1"