cargo-features = ["edition2024"]
[package]
name = "Fractional-Marketplace"
version = "0.1.0"
edition = "2024"

# remove solana client when compiling smart contract with cargo sbf
[dependencies]
borsh = "1.5.7"
mpl-utils = "0.4.1"
tokio = "1.47.1"
borsh-derive = "1.5.7"
solana-client = "2.3.7"
solana-program = "2.3.0"
mpl-core = "0.10.1"
spl-token = { version = "8.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = "7.0.0"
serde = { version = "1.0.219", features = ["derive"] }
config = "0.15.14"

[dev-dependencies]
solana-program-test = "2.3.6"
solana-sdk = "2.3.0"

[lib]
crate-type = ["cdylib", "lib"]